--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body background="background.jpg">
   <center>
-    <h1 class="btn heading">AI Baby Montior</h1><br><br>
+    <h1 class="heading">AI Baby Montior</h1><br><br>
 <p id="status" class="btn"> </p><br><br>
 <p id="baby_status" class="btn "></p>
   </center>
